# helloworld

./: README.md
aarch64/: Makefile  boot.S  client_gdb.sh  service_gdb.sh
ai/: gpu.py  matmul.py
ai/tensorflow/: InteractiveSession.py  placeholder.py  session.py  tf_fetch.py  truncated_normal.py  variable.py
android_app/APK/: GenerateAPK
android_app/MyButton/: settings.gradle.kts
android_app/MyClick/: settings.gradle.kts
android_app/MyColumn/: settings.gradle.kts
android_app/MySurface/: settings.gradle.kts
android_app/lazycloum/: settings.gradle.kts
android_app/responsiveviewsactivityApplication/: settings.gradle.kts
android_app/text/: settings.gradle.kts
application/algorithm/: array_queue.c
application/c/: example.c  (+8 more)
arm/: qemu_aarch_gdb.sh  qemu_arm_gdb.sh  qemu_hello.c
arm/cortexm/: CMakeLists.txt  ReadMe.md  build.py  build_cm3_lm3s6965evb.sh  build_cm4_netduinoplus2.sh  build_cm55_mps3-an547.sh  build_cm85.sh  clang.mk  clean.sh  gdb_cm85.sh  gdbserver_cm85.sh  makefile  makefile_armv7m  makefile_armv8m  qemu_cm33_mps2-an505.sh  qemu_cm3_lm3s6965evb.sh  qemu_cm4_netduinoplus2.sh  qemu_cm55_mps3-an547.sh  qemu_cm85.sh  qemu_lm3.sh  qemu_netp.sh  qemu_riscv.sh  qemu_stop.sh
arm/cortexm/src/: arch.h  contex_switch.s  main.c
arm/cortexm/src/arch/: arch.h  arch.mk  dwt_cyccnt.c  dwt_cyccnt.h  main.c
arm/cortexm/src/arch/armv7m/: armv7m.mk
arm/cortexm/src/arch/armv8m/: armv8m.mk  dfx.c
arm/cortexm/src/arch/riscv/: dfx.c  main.c  mpu.c  riscv.mk  trampoline.s
arm/cortexm/src/armv7m/: arch.c  arch.h  arch_s.s  armv7m.ld  cm3.c  cm3_s.s  dfx.c  int_vector.c  main.c
arm/cortexm/src/armv8m/: CMakeLists.txt  arch.h  arch_s.s  armv8m.ld  atomic.h  backtrace.c  boot.s  canary.h  cm3.h  cm3_s.s  cm55.c  cm55_s.s  context_gcc.S  cpu.c  cpu.h  cpuport.c  dfx.c  exception.h  fpb.h  fpu.c  interrupt.h  main.c  mpu.h  os_stdio.h  showmem.c  syscall_gcc.S  task.c  task.h  testcase_task.c
arm/cortexm/src/cmsis/: cmsis.mk
arm/cortexm/src/cmsis/CMSIS/Core/Include/: cmsis_armclang.h  cmsis_gcc.h  core_cm85.h
arm/cortexm/src/cmsis/CMSIS/DSP/Source/BasicMathFunctions/: arm_clip_q7.c
arm/cortexm/src/cmsis/Device/ARM/ARMCM3/Source/: startup_ARMCM3.c
arm/cortexm/src/cmsis/Device/ARM/ARMCM4/Include/: system_ARMCM4.h
arm/cortexm/src/cmsis/Device/ARM/ARMCM55/Source/: startup_ARMCM55.c
arm/cortexm/src/cmsis/Device/ARM/ARMCM85/Source/: startup_ARMCM85.c
arm/cortexm/src/components/: components.mk  module.c  module.h  showmem.c
arm/cortexm/src/components/overlay/: omain.c  overlay0.c
arm/cortexm/src/components/utest/: utest.c  utest_entry.c
arm/cortexm/src/include/: board.h  clib.h  cpu.h  lib.h  os.h  overlay.h  type.h  typedef.h
arm/cortexm/src/libs/: ReadMe.md  bit.c  bitmap.c  clib.c  libs.mk
arm/cortexm/src/platform/cm85/: CMakeLists.txt  board.c  board.mk  board_config.mk  cmsdk_uart.c  core_cm55.h  cpuidle.c  dfx.c  mem.ld  menu_config.mk  omain.c  overlay0.c  overlay1.c  plat.ld  platform.mk
arm/cortexm/src/platform/lm3s6965evb/: CMakeLists.txt  board.c  board.mk  mem.ld  plat.ld  platform.mk  platform_clang.mk
arm/cortexm/src/platform/mps2-an505/: armv8m.ld  board.c  board_config.mk  menu_config.mk
arm/cortexm/src/platform/mps3-an547/: ARMCM55.h  CMakeLists.txt  board.c  board.mk  board_config.mk  dfx.c  mem.ld  plat.ld  platform.mk
arm/cortexm/src/platform/netduinoplus2/: CMakeLists.txt  board.mk  board_config.mk  plat.ld  platform.mk
arm/cortexm/src/platform/riscv/: SMM_MPS3.h  board.c  board.mk  plat.ld
arm/cortexm/src/rtos/: rtos.mk
arm/cortexm/src/rtos/evolution/: evolution.mk
arm/cortexm/src/rtos/evolution/include/: event.h
arm/cortexm/src/rtos/evolution/kernel/: lib.c  sem.c  task.c
arm/cortexm/src/rtos/include/: kalloc.h  spinlock.h
arm/cortexm/src/rtos/kernel/: kalloc.c  mutex.c  spinlock.c
arm/cortexm/src/rtos/kvolution/: kvolution.mk
arm/cortexm/src/rtos/kvolution/kernel/: lib.c  task.c
arm/cortexm/src/testcase/: mpu_test.c  testcase.c  testcase.h  testcase.mk
arm/cortexm/src/testcase/cm85/: config.h  platform.mk  test_cpu.c  test_exec.c  test_menu_config.c
arm/cortexm/src/testcase/lm3s6965evb/: testcase_plat.mk
arm/cortexm/src/testcase/mps2-an505/: platform.mk  test_table.c
arm/cortexm/src/testcase/mps3-an547/: CMakeLists.txt  config.h.in  mpu_test.c  platform.mk  test_cpu.c  test_exec.c  test_init.c  test_menu_config.c  test_mpu.c  test_os.c  test_svc.c  test_systick.c  test_table.c  test_table.h  testcase_dfx_fpu.c  testcase_fault_fpu.c  testcase_illegal_instruction_excution.c  testcase_plat.mk  testcase_usagefault.c
arm/cortexm/src/testcase/netduinoplus2/: testcase_plat.mk  testcase_usagefault.c
arm/cortexm/src/testcase/riscv/: testcase_bad_addr_double_word_write.c  testcase_dwt.c  testcase_unaligned_double_word_read.c
arm/cortexm/src/utest/: utest.mk  utest_assert.h  utest_entry.c  utest_log.h
arm/cortexm/src/utest/cm85/: test.c
arm/cortexm/src/utestcase/: utestcase.mk
arm/cortexm/src/utestcase/cm85/: testcase_mpu.c  testcase_usagefault.c
c_bsp/: bit.c  pack.c  testcase_macro.c
clang_cmake_so/: CMakeLists.txt  ReadMe.txt  debug.sh  main.c  plat.ld  toolchain.cmake
clang_cmake_so/alib/: CMakeLists.txt  lib_add.c
clang_cmake_so/so/: CMakeLists.txt  lib_math.c  lib_sub.c
finance/: fan_akshare.py  fan_akshare1.py  fan_akshare2.py  fan_akshare3.py  fan_akshare4.py  fan_akshare5.py  fan_akshare_A_data.py  fan_akshare_H_stock.py  fan_akshare_get_stock_code_id.py  fan_akshare_gold_price.py  fan_akshare_xiaomi.py  fan_akshare_xiaomi2.py  fan_car.py  fan_car2.py  fan_car3.py  gold_price.py  gold_price_3months.py  gold_price_history.py  gold_price_months.py  stock_show_lib.py  stock_show_lib1.py  xiaomi.py
linux/: INSTALL
mcu/: CMakeLists.txt  Makefile  cmake_cm55_mps3-an547.sh  fs.img  go.py  main.c  makefile  qemu_armv9_a710.sh  qemu_cm3_lm3s6965evb.sh  qemu_riscv.sh  qemu_riscv64_s.sh  stop_qemu.sh
perf/: main.c
qemu/: qemu_arm64_initramfs_easy.sh  qemu_hello.c
script/cmake/helloworld/t1/: CMakeLists.txt  main.c
testcase/: Makefile
xv6-rv32-master/: Makefile
(+1153 files in other folders)
