CMAKE_MINIMUM_REQUIRED(VERSION 3.26) 

include(toolchain.cmake)
PROJECT(FRANK) 

AUX_SOURCE_DIRECTORY(. SRC_LIST) 
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
set(LINK_SCRIPTS "-Tplat.lds")
message("CMAKE_C_COMPILER is: ${CMAKE_C_COMPILER}")
message("CMAKE_C_FLAGS is: ${CMAKE_C_FLAGS}")
ADD_EXECUTABLE(frank ${SRC_LIST}) 